<resources>
    <string name="app_name">Private DNS Quick Toggle</string>
    <string name="tile_name">Private DNS Toggle</string>
    <string name="permission_missing">Permission not granted, check app to see how to do it</string>
    <string name="dns_off">Off</string>
    <string name="dns_auto">Auto</string>
    <string name="dns_unknown">Unknown</string>
    <string name="add_server">Add Server</string>
    <string name="menu_add">Add</string>
    <string name="menu_save">Save</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="select_server">Select Server</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete_question">Delete</string>
    <string name="delete_message">Are you sure you want to delete server?</string>
    <string name="delete">Delete</string>
    <string name="server_length_error">Server address cannot be empty</string>
    <string name="add_edittext_label_hint">DNS server Label (Optional)</string>
    <string name="add_edittext_hint">DNS server address</string>
    <string name="options">Options</string>
    <string name="ok">OK</string>
    <string name="auto_option_description">Choose which options to include in the tile</string>
    <string name="auto_option_only_off">Only off</string>
    <string name="auto_option_only_auto">Only auto</string>
    <string name="auto_option_off_and_auto">Off and auto</string>
    <string name="auto_option_only_private">Only Private DNS</string>
    <string name="open_app">Open app</string>
    <string name="set_to_off_toast">Private DNS turned off</string>
    <string name="set_to_auto_toast">Private DNS set to auto</string>
    <string name="set_to_provider_toast">Private DNS set to %1$s</string>
    <string name="require_unlock_setting">Require unlocking the device to change server</string>
    <string name="auto_revert_enable">Auto-revert to previous DNS after timeout</string>
    <string name="auto_revert_duration_label">Revert after</string>
    <string name="minutes_short">min</string>
    <string name="a11y_drag_handle">Drag handle</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="import_success">Imported</string>
    <string name="import_failure">Import failed</string>
    <string name="import_failure_json">Import failed, malformed JSON</string>
    <string name="copy_success">Copied</string>
    <string name="menu_import_from_file">From file</string>
    <string name="menu_import_from_clipboard">From clipboard</string>
    <string name="menu_export_to_clipboard">To clipboard</string>
    <string name="menu_export_share">Share</string>
    <string name="menu_export_to_file">To file</string>
    <string name="export_failure">Saving failed</string>
    <string name="export_success">Saved successfully</string>
    <string name="edit_server">Edit server</string>
    <string name="no_servers_added">No Servers Added</string>
    <string name="empty_hint">Tap on the button below to add one</string>
    <string name="add_server_enabled">Enabled</string>
    <string name="shizuku_success_toast">Permission granted, you can revoke the Shizuku permission now</string>
    <string name="shizuku_failure_toast">Failed to acquire permission, please grant it manually</string>
    <string name="shortcut_do_cycle">Next server/mode</string>
    <string name="shortcut_switch_mode">Switch mode</string>
    <string name="shortcut_turn_on">Turn on</string>
    <string name="shortcut_turn_off">Turn off</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="permission_dialog_title">Permission Required</string>
    <string name="permission_intro">To change the system Private DNS settings, we need you to manually grant the WRITE_SECURE_SETTINGS permission.</string>
    <string name="permission_how_title">How to grant</string>
    <string name="permission_how_details">You can grant the permission in two ways:</string>
    <string name="permission_how_1">Install and activate %1$s from the Play Store and restart the app</string>
    <string name="permission_how_2">Use adb to grant the permission manually by following %1$s</string>
    <string name="permission_footer">You only need to do this once. You can browse the app, add servers, and change settings without the permission.</string>
    <string name="permission_shizuku_text">Shizuku</string>
    <string name="permission_shizuku_url">https://play.google.com/store/apps/details?id=moe.shizuku.privileged.api</string>
    <string name="permission_manual_text">instructions</string>
    <string name="permission_manual_url">https://karasevm.github.io/PrivateDNSAndroid/</string>
</resources>
