<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/options"
        android:title="@string/options"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_settings_24"
        />
    <item android:id="@+id/import_settings_submenu"
        android:title="@string/menu_import"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/import_settings_file"
                android:title="@string/menu_import_from_file"
                app:showAsAction="never" />
            <item android:id="@+id/import_settings_clipboard"
                android:title="@string/menu_import_from_clipboard"
                app:showAsAction="never" />
        </menu>
    </item>
    <item android:id="@+id/export_settings"
        android:title="@string/menu_export"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/export_settings_clipboard"
                android:title="@string/menu_export_to_clipboard"
                app:showAsAction="never" />
            <item android:id="@+id/export_settings_share"
                android:title="@string/menu_export_share"
                app:showAsAction="never" />
            <item android:id="@+id/export_settings_file"
                android:title="@string/menu_export_to_file"
                app:showAsAction="never" />
        </menu>
    </item>
    <item android:id="@+id/privacy_policy"
        android:title="@string/menu_privacy_policy"
        app:showAsAction="never" />
    <item android:id="@+id/open_source_licenses"
        android:title="@string/open_source_licenses"
        app:showAsAction="never" />
</menu>